name:                collab
version:             0.1.0.0
homepage:            http://dennis84.github.io/collab-web/
license:             MIT
license-file:        LICENSE
author:              Dennis Dietrich
maintainer:          d.dietrich84@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable collab
  main-is: Main.hs
  build-depends:
      base              >= 4      && <5
    , websockets        >= 0.8
    , transformers      >= 0.4
    , http-types        >= 0.8
    , text              >= 1
    , random            >= 1

  default-language:    Haskell2010
