name:                collab
version:             0.1.0.0
homepage:            http://dennis84.github.io/collab-web/
license:             MIT
license-file:        LICENSE
author:              Dennis Dietrich
maintainer:          d.dietrich84@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language: Haskell2010

  exposed-modules:
    Collab.Api
    Collab.App
    Collab.Json
    Collab.State
    Collab.TH
    Collab.Util

  build-depends:
      base              >= 4      && <5
    , websockets        >= 0.8
    , transformers      >= 0.4
    , http-types        >= 0.8
    , text              >= 1
    , random            >= 1
    , aeson             >= 0.8
    , bytestring        >= 0.9

executable collab
  main-is:          ../Main.hs
  hs-source-dirs:   dist
  default-language: Haskell2010

  build-depends:
      base
    , collab
    , websockets

test-suite tests
  hs-source-dirs:   tests
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
  default-language: Haskell2010

  ghc-options:
    -Wall
    -fno-warn-missing-signatures

  other-modules:
    Collab.Test.Util
    Collab.Test.ApiTests

  build-depends:
      HUnit             >= 1.2
    , base
    , collab
    , websockets        >= 0.8
    , transformers      >= 0.4
    , http-types        >= 0.8
    , text              >= 1
    , aeson
